--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     </ul>
   </nav>
 
-  <h1>Welcome To Ironhacker's Page</h1>
+  <h1>Nicolas Zysermann</h1>
 
   <section>
     <h2>Things I Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Pizza</li>
+      <li>Potatoes</li>
+      <li>Cheese</li>
     </ul>
   </section>
 
   <section>
     <h2>Things I Don't Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Mashed Potatoes</li>
+      <li>Instagram</li>
+      <li>Communism</li>
     </ul>
   </section>
 </body>
