--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   </section>
 
   <section>
-    <h2>Things I Don't Like</h2>
+    <h2>Thingsss I Don't Like</h2>
     <ul>
       <li>Mashed Potatoes</li>
       <li>Instagram</li>
-      <li>Communism</li>
+      <li>Communismeeee</li>
     </ul>
   </section>
 </body>
